platform/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.7.5
          args:
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.traefik.address=:8080
            - --ping=true
            - --api.dashboard=true
            - --api.insecure=true
            - --providers.kubernetescrd=true
            - --providers.kubernetescrd.allowCrossNamespace=true
            - --providers.kubernetesingress       
            - --log.level=INFO
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: traefik
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: traefik
          livenessProbe:
            httpGet:
              path: /ping
              port: traefik
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
