platform/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  annotations:
    kube-vip.io/loadbalancerIPs: "192.168.178.63"
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: websecure
